--- a/views/partials/homepage.handlebars
+++ b/views/partials/homepage.handlebars
@@ -1,4 +1,4 @@
-    {{#each recentPosts}}
+    {{#each posts as |post|}}
     <div class="container my-4">
         <div class="row">
             <div class="col-lg-12">
