--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,7 +2,7 @@
     <div class="container my-4">
         <div class="row">
             <div class="col-lg-12">
-                <div class="blog-title text-light p-3">
+                <div class="blog-title text-light p-3 rounded-top">
                     <h5 class="d-inline">{{{this.title}}}</h5>
                     <p class="d-inline float-end">Posted By: {{{this.user.name}}} on {{{this.date}}}</p>
                 </div>
@@ -10,7 +10,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <div class="bg-light p-3">
+                <div class="bg-light p-3 rounded-bottom">
                     <p class="mb-0">{{{this.content}}}</p>
                 </div>
             </div>
