--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,7 +4,7 @@
             <div class="col-lg-12">
                 <div class="blog-title text-light p-3 rounded-top">
                     <h5 class="d-inline">{{{this.title}}}</h5>
-                    <p class="d-inline float-end">Posted By: {{{this.user.name}}} on {{{this.date}}}</p>
+                    <p class="d-inline float-end">Posted By: {{{this.user.name}}} on {{{formatDate createdAt}}}</p>
                 </div>
             </div>
         </div>
