--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -11,7 +11,7 @@
           <input class="form-input" type="password" id="password-signup" />
         </div>
         <div class="form-group p-2">
-          <button class="cstm-btn btn btn-primary" type="submit">Sign Up</button>
+          <button class="cstm-btn btn btn-primary signup-form" type="submit">Sign Up</button>
         </div>
       </form>
     </div>
