--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,8 +12,8 @@
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap"
         rel="stylesheet">
 
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
 
     <link rel="stylesheet" href="/css/style.css">
@@ -33,10 +33,10 @@
                 <ul class="navbar-nav ms-auto">
                     {{#if loggedIn}}
                     <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/dashboard/{{userId}}">Dashboard</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/newpost">+New Post</a></li>
+                    <li class="nav-item"><a class="nav-link" id="logout" href="/">Logout</a></li>
                     {{else}}
-                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
                     <li class="nav-item"><a class="nav-link" href="/signup">Sign Up</a></li>
                     {{/if}}
@@ -47,6 +47,10 @@
 
     <main class="container container-fluid mx-5">
         {{{ body }}}
+
+
+        <script src="/js/logout.js"></script>
+
     </main>
 
 </body>
