--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,20 +1,26 @@
-<div class="card p-3 mt-5 cstm-light-text cstm-shadow">
-  <div class="cstm-light-text card-body">
-    <h2 class="cstm-light-text card-title">Login</h2>
-    <form class="form login-form">
-      <div class="form-group p-2">
-        <label for="email-login">Username:</label>
-        <input class="form-input" type="text" id="user-login" />
-      </div>
-      <div class="form-group p-2">
-        <label for="password-login">Password:</label>
-        <input class="form-input" type="password" id="password-login" />
-      </div>
-      <div class="form-group p-2">
-        <button class="cstm-btn btn btn-primary login-form" type="submit">Login</button>
-      </div>
-    </form>
-  </div>
+<div class="container mt-5 p-3 rounded-top cstm-light-text card-border">
+    <div class="row justify-content-center">
+        <div class="col-12 mb-2">
+            <h2>Login</h2>
+        </div>
+    </div>
+</div>
+
+<div class="container lg-card-body rounded-bottom p-5 mb-4">
+    <div class="row justify-content-center">
+            <!-- Login Form -->
+        <form class="col-8 login-form">
+            <div class="mb-3">
+                <label for="username-login" class="form-label">Username</label>
+                <input type="text" class="form-control" placeholder="john_doe" id="username-login" required>
+            </div>
+            <div class="mb-3">
+                <label for="password-login" class="form-label">Password</label>
+                <input type="password" placeholder="password" class="form-control" id="password-login" required>
+            </div>
+            <button type="submit" id="login-button" class="cstm-btn btn btn-primary">Login</button>
+        </form>
+    </div>
 </div>
 
 <script src="/js/login.js"></script>
