--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,21 +1,26 @@
-  <div class="card p-3 mt-5 cstm-light-text cstm-shadow">
-    <div class="cstm-light-text card-body">
-      <h2 class="cstm-light-text card-title">Sign Up</h2>
-      <form class="form signup-form">
-        <div class="form-group p-2">
-          <label for="user-signup">Username:</label>
-          <input class="form-input" type="text" id="user-signup" />
+<div class="container mt-5 p-3 rounded-top cstm-light-text card-border">
+    <div class="row justify-content-center">
+        <div class="col-12 mb-2">
+            <h2>Signup</h2>
         </div>
-        <div class="form-group p-2">
-          <label for="password-signup">Password:</label>
-          <input class="form-input" type="password" id="password-signup" />
-        </div>
-        <div class="form-group p-2">
-          <button class="cstm-btn btn btn-primary signup-form" type="submit">Sign Up</button>
-        </div>
-      </form>
     </div>
-  </div>
+</div>
+
+<div class="container lg-card-body rounded-bottom p-5 mb-4">
+    <div class="row justify-content-center">
+            <!-- Signup Form -->
+            <form class="col-8 signup-form">
+            <div class="mb-3">
+                <label for="username" class="form-label">Username</label>
+                <input type="text" placeholder="john_doe" class="form-control" id="username-signup" name="username" required>
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" placeholder="password" class="form-control" id="password-signup" name="password" required>
+            </div>
+            <button type="submit" id="signup-button" class="cstm-btn btn btn-primary">Signup</button>
+        </form>
+    </div>
 </div>
 
 <script src="/js/signup.js"></script>
