--- a/views/postpage.handlebars
+++ b/views/postpage.handlebars
@@ -1,12 +1,64 @@
-<body>
-    <div class="container my-4">
-        <div class="row">
-            <div class="col-lg-8 offset-lg-2">
-                <h1>{{ post.title }}</h1>
-                <p>Posted By: {{ post.User.username }}</p>
-                <p>{{ formatDate post.created_at }}</p>
-                <div class="mt-3">{{{ post.content }}}</div>
+<div class="container my-4">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="blog-title text-light p-3 rounded-top">
+                <h5 class="d-inline">{{post.dataValues.title}}</h5>
+                <p class="d-inline float-end">
+                    Posted By:
+                    <a class="cstm-dark-text" href="/dashboard/{{user.dataValues.id}}">
+                        {{user.dataValues.username}}
+                    </a>
+                    on {{formatDate post.dataValues.created_at}}
+                </p>
+            </div>
+            <div class="bg-light p-3 rounded-bottom">
+                <p class="mb-0">{{post.dataValues.content}}</p>
             </div>
         </div>
     </div>
-</body>
+</div>
+{{#if loggedIn}}
+<!-- COMMENT SECTION -->
+
+<div style="margin-left: 7px; margin-right: 7px;">
+<div class="container mt-5 p-3 rounded-top cstm-light-text card-border">
+    <div class="row justify-content-center">
+        <div class="col-12 mb-2">
+            <h2 id="comments">Comments</h2>
+        </div>
+    </div>
+</div>
+<div class="container lg-card-body rounded-bottom p-5 mb-4">
+    <!-- Add Comments-->
+    <div class="row justify-content-center mb-4">
+        <div class="col-12">
+            <form id="comment-form">
+                <div class="form-group">
+                    <label for="comment"><h6>Leave a Comment!</h6></label>
+                    <textarea class="form-control mb-1" id="commentBody" rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary cstm-btn">Submit</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- User Comments -->
+    {{#if post.comments.length}}
+        {{#each post.comments}}
+            <div class="card mb-3">
+                <a href="/users/{{this.user.id}}"><div class="card-header">{{this.user.username}}</div></a>
+                <div class="card-body">
+                    <p class="card-text">{{this.body}}</p>
+                </div>
+            </div>
+        {{/each}}
+    {{else}}
+        <h6>No comments yet.</h6>
+    {{/if}}
+</div>
+{{else}}
+
+{{/if}}
+</div>
+
+<script src="/js/comment.js"></script>
