--- a/views/postpage.handlebars
+++ b/views/postpage.handlebars
@@ -81,7 +81,7 @@
         {{/if}}
         <div class="row justify-content-center mb-4">
             <div class="col-12">
-                <p>Please <a href="/login" style="color: var(--accent2) !important;">login</a> to post comments.</p>
+                <p>Please <a href="/login" class="teal-link">login</a> to post comments.</p>
             </div>
         </div>
     </div>
