--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,7 +6,7 @@
             {{#each posts}}
                 <div class="card mb-3">
                     <div class="card-body">
-                        <h5 class="card-title">{{title}}</h5>
+                        <h5 class="card-title"><a href="/post/{{id}}" class="black-link">{{title}}</a></h5>
                         <p class="card-text">{{content}}</p>
                         <p class="card-text"><small class="text-muted">{{formatted_date}}</small></p>
                     </div>
