--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,21 +1,17 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-12">
-            <h6><a href="/createpost">create a new blog post ></a></h6>
-            <h2>Your Blog Posts</h2> 
+                <h6><a href="/createpost">create a new blog post ></a></h6>
+            <h2>Blog Posts Made By {{user.dataValues.username}} </h2> 
             {{#each posts}}
                 <div class="card mb-3">
                     <div class="card-body">
                         <h5 class="card-title"><a href="/post/{{id}}" class="black-link">{{title}}</a></h5>
                         <p class="card-text">{{content}}</p>
                         <p class="card-text"><small class="text-muted">{{formatted_date}}</small></p>
-                        <a href="/updatepost/{{id}}" class="btn btn-primary">Update</a>
-                        <button class="btn btn-danger delete-post" data-id="{{id}}">Delete</button>
                     </div>
                 </div>
             {{/each}}
         </div>
     </div>
 </div>
-
-<script src="/js/postActions.js"></script>
