--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,7 +8,7 @@
 </a>
 <p class="d-inline float-end">
     Posted By:
-    <a class="cstm-dark-text" href="/dashboard/{{post.user.id}}">{{{post.user.username}}}</a>
+    <a class="cstm-dark-text" href="/profile/{{post.user.id}}">{{{post.user.username}}}</a>
     on {{{post.formatted_date}}}
 </p>
 </div>
