--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,7 +33,7 @@
                 <ul class="navbar-nav ms-auto">
                     {{#if loggedIn}}
                     <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/dashboard/{{userId}}">Dashboard</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
                     <li class="nav-item"><a class="nav-link" href="/newpost">+New Post</a></li>
                     <li class="nav-item"><a class="nav-link" id="logout" href="/">Logout</a></li>
                     {{else}}
