--- a/views/updatepost.handlebars
+++ b/views/updatepost.handlebars
@@ -6,7 +6,7 @@
                     <h2 class="card-title mb-0">Update Blog Post</h2>
                 </div>
                 <div class="card-body">
-                    <form action="/updatepost/{{post.dataValues.id}}" method="POST">
+                    <form id="update-post-form" action="/updatepost/{{post.dataValues.id}}" method="PUT">
                         <div class="mb-3">
                             <label for="title" class="form-label">Title</label>
                             <input type="text" class="form-control" id="title" name="title" placeholder="Enter the title" value="{{post.dataValues.title}}">
@@ -23,5 +23,4 @@
     </div>
 </div>
 
-
-<script src="/js/postActions.js"></script>
+<script src="/js/updatepost.js"></script>
