--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,11 +6,11 @@
                 <div class="blog-title text-light p-3 rounded-top">
                     <h5 class="d-inline">{{{post.title}}}</h5>
 </a>
-<p class="d-inline float-end">
+<p class="d-inline float-end"><small>
     Posted By:
-    <a class="cstm-dark-text" href="/profile/{{post.user.id}}">{{{post.user.username}}}</a>
+    <a class="cstm-dark-text white-link" href="/profile/{{post.user.id}}">{{{post.user.username}}}</a>
     on {{{post.formatted_date}}}
-</p>
+</small></p>
 </div>
 </div>
 </div>
