--- a/views/postpage.handlebars
+++ b/views/postpage.handlebars
@@ -1,29 +1,33 @@
 <div class="container my-4">
     <div class="row">
         <div class="col-lg-12">
-            <div class="blog-title text-light p-3 rounded-top">
-                <h5 class="d-inline">{{post.dataValues.title}}</h5>
-                <p class="d-inline float-end">
-                    Posted By:
-                    <a class="cstm-dark-text" href="/profile/{{user.dataValues.id}}">
-                        {{user.dataValues.username}}
-                    </a>
-                    on {{formatDate post.dataValues.created_at}}
-                </p>
-            </div>
-            <div class="bg-light p-3 rounded-bottom">
-                <p class="mb-0">{{post.dataValues.content}}</p>
+            <div class="card">
+                <div class="card-header">
+                    <h5 class="card-title">{{post.dataValues.title}}</h5>
+                </div>
+                <div class="card-body">
+                    <p class="card-text">{{post.dataValues.content}}</p>
+
+                    <p class="card-text"><small class="text-muted">
+                        Posted By:
+                        <a class="black-link" href="/profile/{{user.dataValues.id}}">
+                            {{user.dataValues.username}}
+                        </a>
+                        on {{formatDate post.dataValues.created_at}}
+                    </small></p>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
+
 {{#if loggedIn}}
 <!-- COMMENT SECTION -->
 <div style="margin-left: 7px; margin-right: 7px;">
-    <div class="container mt-5 p-3 rounded-top cstm-light-text card-border">
+    <div class="container mt-5 p-2 pt-3 rounded-top cstm-light-text card-border">
         <div class="row justify-content-center">
-            <div class="col-12 mb-2">
+            <div class="col-12">
                 <h2 id="comments">Comments</h2>
             </div>
         </div>
