--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -10,12 +10,33 @@
                         <p class="card-text">{{content}}</p>
                         <p class="card-text"><small class="text-muted">{{formatted_date}}</small></p>
                         <a href="/updatepost/{{id}}" class="btn btn-primary">Update</a>
-                        <button class="btn btn-danger delete-post" data-id="{{id}}">Delete</button>
+<button class="btn btn-danger delete-post" data-id="{{id}}" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">Delete</button>
                     </div>
                 </div>
             {{/each}}
         </div>
     </div>
 </div>
+
+
+
+<div class="modal fade" id="deleteConfirmationModal" tabindex="-1" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteConfirmationModalLabel">Confirm Deletion</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this post?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" id="confirmDelete">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <script src="/js/deletepost.js"></script>
