--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,17 +2,18 @@
     <div class="row">
         <div class="col-md-12">
             <h6><a href="/createpost">create a new blog post ></a></h6>
-            <h2>Your Blog Posts</h2> 
+            <h2>Your Blog Posts</h2>
             {{#each posts}}
-                <div class="card mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title"><a href="/post/{{id}}" class="black-link">{{title}}</a></h5>
-                        <p class="card-text">{{content}}</p>
-                        <p class="card-text"><small class="text-muted">{{formatted_date}}</small></p>
-                        <a href="/updatepost/{{id}}" class="btn btn-primary">Update</a>
-<button class="btn btn-danger delete-post" data-id="{{id}}" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">Delete</button>
-                    </div>
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title"><a href="/post/{{id}}" class="black-link">{{title}}</a></h5>
+                    <p class="card-text">{{content}}</p>
+                    <p class="card-text"><small class="text-muted">{{formatted_date}}</small></p>
+                    <a href="/updatepost/{{id}}" class="btn btn-primary">Update</a>
+                    <button class="btn btn-danger delete-post" data-id="{{id}}" data-bs-toggle="modal"
+                        data-bs-target="#deleteConfirmationModal">Delete</button>
                 </div>
+            </div>
             {{/each}}
         </div>
     </div>
@@ -20,7 +21,8 @@
 
 
 
-<div class="modal fade" id="deleteConfirmationModal" tabindex="-1" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
+<div class="modal fade" id="deleteConfirmationModal" tabindex="-1" aria-labelledby="deleteConfirmationModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
