--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,13 +1,16 @@
 {{#each posts as |post|}}
-    <a href="/post/{{post.id}}" class="text-decoration-none">
-        <div class="card my-4">
-            <div class="card-header blog-title">
-                <h5 class="card-title mb-0">{{{post.title}}}</h5>
-                <small class="light-text">Posted By: <a class="white-link" href="/profile/{{post.user.id}}">{{{post.user.username}}}</a> on {{{post.formatted_date}}}</small>
-            </div>
-            <div class="card-body">
-                <p class="card-text mb-0">{{{post.content}}}</p>
-            </div>
-        </div>
-    </a>
+<a href="/post/{{post.id}}" class="text-decoration-none">
+    <div class="card my-4">
+        <div class="card-header blog-title">
+            <h5 class="card-title mb-0">{{{post.title}}}</h5>
+</a>
+<small style="color: var(--light2); ">Posted By: <a class="white-link"
+        href="/profile/{{post.user.id}}">{{{post.user.username}}}</a> on
+        {{{post.formatted_date}}}</small>
+</div>
+<div class="card-body">
+    <p class="card-text mb-0">{{{post.content}}}</p>
+</div>
+</div>
+
 {{/each}}
