--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,13 +28,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     {{#if loggedIn}}
-                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/newpost">+New Post</a></li>
+                    <li class="nav-item"><a class="nav-link white-link" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link white-link" href="/dashboard">Dashboard</a></li>
+                    <li class="nav-item"><a class="nav-link white-link" href="/newpost">+New Post</a></li>
                     <li class="nav-item"><a class="nav-link" id="logout" href="/">Logout</a></li>
                     {{else}}
-                    <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/signup">Sign Up</a></li>
+                    <li class="nav-item"><a class="nav-link white-link" href="/login">Login</a></li>
+                    <li class="nav-item"><a class="nav-link white-link" href="/signup">Sign Up</a></li>
                     {{/if}}
                 </ul>
             </div>
