posts display line breaks

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -30,7 +30,7 @@
                     <div class="card mb-3">
                         <div class="card-body">
                             <h5 class="card-title"><a href="/post/{{id}}" class="black-link">{{title}}</a></h5>
-                            <p class="card-text">{{content}}</p>
+                            <p class="card-text blog-content">{{content}}</p>
                             <p class="card-text"><small class="text-muted">{{formatted_date}}</small></p>
                             <a href="/updatepost/{{id}}" class="btn btn-primary">Update</a>
                             <button class="btn btn-danger delete-post" data-id="{{id}}" data-bs-toggle="modal"
