--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -9,7 +9,7 @@
         {{{post.formatted_date}}}</small>
 </div>
 <div class="card-body">
-    <p class="card-text mb-0">{{{post.content}}}</p>
+    <p class="card-text blog-content mb-0">{{{post.content}}}</p>
 </div>
 </div>
 
