--- a/views/postpage.handlebars
+++ b/views/postpage.handlebars
@@ -22,7 +22,7 @@
 
 {{#if loggedIn}}
 <!-- COMMENT SECTION -->
-<div class="container mt-5">
+<div class="container mt-5 mb-3">
     <div class="row justify-content-center">
         <div class="col-lg-12">
             <div class="card bg-light">
