removed helper in favor of date-fns

--- a/views/postpage.handlebars
+++ b/views/postpage.handlebars
@@ -12,7 +12,7 @@
                         <a class="black-link" href="/profile/{{user.dataValues.id}}">
                             {{user.dataValues.username}}
                         </a>
-                        on {{formatDate post.dataValues.created_at}}
+                        on {{post.dataValues.formatted_date}}
                     </small></p>
                 </div>
             </div>
