--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,7 +37,7 @@
         font-family: 'Bebas Neue', sans-serif;
         text-shadow: var(--shadow) 2px 2px 5px;
         font-weight: 400;
-        padding: 2px 0px 0px 9px;
+        /* padding: 2px 0px 0px 9px; */
         color: var(--light2);
     }
 
