--- a/views/postpage.handlebars
+++ b/views/postpage.handlebars
@@ -8,11 +8,10 @@
                 <div class="card-body">
                     <p class="card-text blog-content">{{post.dataValues.content}}</p>
                     <p class="card-text"><small class="text-muted">
-                        Posted By:
+                        Posted by 
                         <a class="black-link" href="/profile/{{user.dataValues.id}}">
                             {{user.dataValues.username}}
                         </a>
-                        on {{formatDate post.dataValues.created_at}}
                     </small></p>
                 </div>
             </div>
