changed instances of createpost to newpost

--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -6,7 +6,7 @@
                     <h2 class="card-title mb-0">Create a New Blog Post</h2>
                 </div>
                 <div class="card-body">
-                    <form action="/createpost" method="POST">
+                    <form action="/newpost" method="POST">
                         <div class="mb-3">
                             <label for="title" class="form-label">Title</label>
                             <input type="text" class="form-control" id="title" name="title" placeholder="Enter the title">
