username displays on /postpage

--- a/views/postpage.handlebars
+++ b/views/postpage.handlebars
@@ -10,8 +10,7 @@
                     <p class="card-text"><small>
                         Posted by 
                         <a class="black-link" href="/profile/{{user.id}}">
-                            {{user.username}} on {{post.formatted_date}}
-                        </a>
+                            {{post.user.username}}</a> on {{post.formatted_date}}
                     </small></p>
                 </div>
             </div>
