--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -6,7 +6,7 @@
                 <div class="card mb-3">
                     <div class="card-body">
                         <h5 class="card-title"><a href="/post/{{id}}" class="black-link">{{title}}</a></h5>
-                        <p class="card-text">{{content}}</p>
+                        <p class="card-text blog-content">{{content}}</p>
                         <p class="card-text"><small class="text-muted">{{formatted_date}}</small></p>
                     </div>
                 </div>
