fixed profile link

--- a/views/postpage.handlebars
+++ b/views/postpage.handlebars
@@ -9,7 +9,7 @@
                     <p class="card-text blog-content">{{post.content}}</p>
                     <p class="card-text"><small>
                         Posted by 
-                        <a class="black-link" href="/profile/{{user.id}}">
+                        <a class="black-link" href="/profile/{{post.user.id}}">
                             {{post.user.username}}</a> on {{post.formatted_date}}
                     </small></p>
                 </div>
